--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,17 @@
 <div>
   <div class="header">
-      <img src="https://www.google.com.br/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-      width="272px" height="92px" >
+    <img class="header-img" src="{{logoImg}}">
+    <div class="header-buttons">
+      <button *ngFor="let headerButton of headerMenus" type="button" class="h-button">
+          {{headerButton}}
+      </button>
+    </div>
+    <div class="header-user">USER DATA----------------------------</div>
+    <div>
+
+    </div>
   </div>
-  <div>
-    FILHO
-    <p-panelMenu [transitionOptions]="'200ms'" [model]="items" [style]="{'width':'300px', 'height':'200px'}"></p-panelMenu>
-    DA PUTA 
-  </div>
-  <div>
-    MEGA MENU
-  </div>
-  <div>
-    MEGA BAR
-  </div>
+  <div class="header-notices"> {{notice}} </div>
 </div>
+<ng-include src="/home"></ng-include>
 
