--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <img class="header-img" src="{{logoImg}}">
     <div class="header-buttons">
       <button *ngFor="let headerButton of headerMenus" type="button" class="h-button">
-          {{headerButton}}
+        {{headerButton}}
       </button>
     </div>
     <div class="header-user">USER DATA----------------------------</div>
@@ -11,7 +11,6 @@
 
     </div>
   </div>
-  <div class="header-notices"> {{notice}} </div>
+  <div class="header-notices" [innerHTML]="notice"></div>
 </div>
-<ng-include src="/home"></ng-include>
-
+<app-home></app-home>
